<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_graphy">

    <fragment
        android:id="@+id/navigation_graphy"
        android:name="com.teamig.imgraphy.ui.graphy.GraphyFragment"
        android:label="@string/title_graphy"
        tools:layout="@layout/fragment_graphy" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.teamig.imgraphy.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.teamig.imgraphy.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>