<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <soup.neumorphism.NeumorphButton
        android:id="@+id/SplashInitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:text="@string/app_name"
        android:textAppearance="@style/Font.DialogTitle"
        android:textColor="@color/neumorphism.Accent"
        style="@style/Neumorphism.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SplashPolicyContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/neumorphism.Background">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/SplashPolicyTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="50dp"
            style="@style/Neumorphism.CardView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/neumorphism_padding"
                android:paddingEnd="@dimen/neumorphism_padding"
                android:gravity="center_vertical"
                android:text="@string/ui_service_policy"
                android:textAppearance="@style/Font.Title"/>

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="50dp"
            style="@style/Neumorphism.CardView"
            app:neumorph_shapeType="pressed"
            app:layout_constraintTop_toBottomOf="@id/SplashPolicyTitleContainer"
            app:layout_constraintBottom_toTopOf="@id/SplashAcceptButton">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ListFadingEdge"
                android:padding="@dimen/neumorphism_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service_policy"
                    android:textAppearance="@style/Font.SubList"/>

            </ScrollView>

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/SplashAcceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:text="@string/ui_accept"
            android:textAppearance="@style/Font.TextButton"
            android:textColor="@color/neumorphism.Accent"
            style="@style/Neumorphism.Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>